--- a/src/components/TodoInsert.scss
+++ b/src/components/TodoInsert.scss
@@ -8,7 +8,7 @@
     padding: 0.5rem;
     font-size: 1.125rem;
     line-height: 1.5;
-    color: #fff;
+    color: #222;
     &::placeholder {
       color: #464646;
     }
